--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,25 @@
 # Basic Information 
-title: Syed Talal Wasim
-position: Computer Vision PhD Student
-affiliation: University of Bonn
-email: wasimtalal(atsign)gmail.com
+title: Khawaja Ghulam Alamdar
+position: Robotics Software Engineer
+affiliation: 
+email: khawaja.alamdar11(atsign)gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: computer vision
-description: This is the homepage of Syed Talal Wasim, a research in computer vision
-canonical: https://talalwasim.github.io/
+keywords: robotics
+description: This is the homepage of Khawaja G. Alamdar
+canonical: https://khalamdar11.github.io/
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
-google_scholar: https://scholar.google.com/citations?user=uHySarAAAAAJ&hl=en
-cv_link: assets/files/CV_Wasim_SyedTalal.pdf
-github_link: https://github.com/TalalWasim
-linkedin: https://www.linkedin.com/in/wasimsyedtalal/
+google_scholar: https://scholar.google.com/citations?user=zwRA42cAAAAJ&hl=en
+cv_link: assets/files/CV_imrcl_15Aug.pdf
+github_link: https://github.com/KhAlamdar11
+linkedin: https://www.linkedin.com/in/khalamdar/
 
 # Images (e.g., your profile picture and your website's favicon) 
 # "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
-avatar: ./assets/img/pic.jpg
+avatar: ./assets/img/khawaja.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
