--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic Information 
 title: Khawaja Ghulam Alamdar
-position: Robotics Software Engineer
-affiliation: 
+position: Researcher
+affiliation: [LARICS](https://larics.fer.hr/)
 email: khawaja.alamdar11(atsign)gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
-keywords: robotics
+keywords: robotics, multi-robot systems, multi-agent systems, autonomous systems, mobile robotics
 description: This is the homepage of Khawaja G. Alamdar
 canonical: https://khalamdar11.github.io/
 
