--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Information 
 title: Khawaja Ghulam Alamdar
 position: Researcher
-affiliation: [LARICS](https://larics.fer.hr/)
+affiliation: Laboratory for Robotics and Intelligent Control Systems (LARICS)
 email: khawaja.alamdar11(atsign)gmail.com
 
 # Search Engine Optimization (SEO)
