--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Khawaja Ghulam Alamdar
 position: Researcher
 affiliation: Laboratory for Robotics and Intelligent Control Systems (LARICS)
-email: khawaja.alamdar11(atsign)gmail.com
+email: khawaja.alamdar11@gmail.com
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
