--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,30 @@
-# Basic Information 
+# Basic Information
 title: Khawaja Ghulam Alamdar
 position: Researcher
 affiliation: Laboratory for Robotics and Intelligent Control Systems (LARICS)
 email: khawaja.alamdar11@gmail.com
 
 # Search Engine Optimization (SEO)
-# The following information is used to improve the website traffic from search engines, e.g., Google.
 keywords: robotics, multi-robot systems, multi-agent systems, autonomous systems, mobile robotics
 description: This is the homepage of Khawaja G. Alamdar
 canonical: https://khalamdar11.github.io/
 
-# Links 
-# If you don't need one of them, you may delete the corresponding line.
+# Links
 google_scholar: https://scholar.google.com/citations?user=zwRA42cAAAAJ&hl=en
 cv_link: assets/files/CV_imrcl_15Aug.pdf
 github_link: https://github.com/KhAlamdar11
 linkedin: https://www.linkedin.com/in/khalamdar/
 
-# Images (e.g., your profile picture and your website's favicon) 
-# "favicon" and "favicon_dark" are used for the light and dark modes, respectively. 
+# Images
 avatar: ./assets/img/khawaja.jpg
 favicon: ./assets/img/favicon.png
 favicon_dark: ./assets/img/favicon-dark.png
 
-# Footnote
-# You may use the option to disable the footnote, "Powered by Jekyll and Minimal Light theme."
-enable_footnote: true
+# Build settings
+markdown: kramdown
+permalink: pretty
 
-# Google Analytics ID
-# Please remove this if you don't use Google Analytics
-# google_analytics: UA-111540567-4
-
-# Use this project as a remote theme for GitHub Pages
-# See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
-remote_theme: yaoyao-liu/minimal-light
-
-# The following files will be removed from the generated website.
+# Exclude from build
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -45,3 +34,5 @@ exclude:
   - README_de.md
   - LICENSE
   - minimal-light.gemspec
+  - _includes/publications.md
+  - _includes/projects.md
